--- a/index.html
+++ b/index.html
@@ -24229,6 +24229,11 @@ player=(function(out){
 
             document.getElementById('blenderName').innerHTML="Crafting...<div style='position:fixed;left:50%;top:175%;transform:translate(-50%,-50%);width:200px;height:25px;border-radius:2px;border:1.5px solid black;background-color:rgb(150,0,0)'><div style='height:25px;width:"+(200-p*200)+"px;background-color:rgb(0,200,0)'></div><p style='color:white;font-size:16px;position:fixed;left:50%;top:-20%;transform:translate(-50%,-50%)'>"+MATH.doTime(Math.max(player.isCrafting.time-TIME,0))+"</p><p style='color:white;font-size:20px;position:fixed;left:-40%;top:200%;transform:translate(-50%,-50%)'>"+MATH.addCommas(a+'')+" / "+MATH.addCommas(player.isCrafting.amount+'')+"</p></div>"
 
+            if(n<1){
+
+                document.getElementById('blenderSpeed').style.display='none'
+            }
+
             document.getElementById('blenderSpeed').innerHTML='Speed Up for '+n+(n===1?' ticket':' Tickets')
 
             if(!n)
@@ -24313,6 +24318,13 @@ player=(function(out){
 
     out.updateBlenderMenu=function(){
 
+        document.getElementById('blenderX').onclick=function(){
+
+            document.getElementById('blenderMenu').style.display='none'
+        }
+
+        document.getElementById('blenderItem').style.transform='translate(70px,50px) scale(3,3)'
+
         if(player.isCrafting){
 
             document.getElementById('blenderMenu').style.display='block'
@@ -24325,6 +24337,8 @@ player=(function(out){
             document.getElementById('blenderReq').style.display='none'
             document.getElementById('blenderEnd').style.display='block'
             document.getElementById('blenderSpeed').style.display='block'
+
+            document.getElementById('blenderItem').innerHTML=itemSVGCode[player.isCrafting.item].replaceAll('AMOUNTININVENTORY','').replaceAll('AMOUNTOFITEMREQUIREDTOCRAFT','').replace('translate(0px,7px)','translate(-2px,2px)').replace('scale(0.77,0.77)','scale(0.5,0.5)')
 
             return
         }
@@ -24341,10 +24355,7 @@ player=(function(out){
 
         document.getElementById('blenderMenu').style.display='block'
         document.getElementById('blenderTitle').innerHTML='What do you want to craft?'
-        document.getElementById('blenderX').onclick=function(){
-
-            document.getElementById('blenderMenu').style.display='none'
-        }
+        
         document.getElementById('leftBlenderButton').onclick=function(){
 
             player.blenderIndex=((player.blenderIndex+blenderRecipes.length-1)%blenderRecipes.length)
@@ -24363,7 +24374,6 @@ player=(function(out){
         +'</p></div>'
 
         document.getElementById('blenderItem').innerHTML=itemSVGCode[item].replaceAll('AMOUNTININVENTORY','').replaceAll('AMOUNTOFITEMREQUIREDTOCRAFT','').replace('translate(0px,7px)','translate(-2px,2px)').replace('scale(0.77,0.77)','scale(0.5,0.5)')
-        document.getElementById('blenderItem').style.transform='translate(70px,50px) scale(3,3)'
 
         document.getElementById('blenderReq').innerHTML=''
 
@@ -29359,6 +29369,8 @@ function RUN_SAVE_CODE(string){
     player.stats=save.stats
     player.hive=[[]]
     player.quests=save.quests
+    player.isCrafting=save.isCrafting
+    TIME=save.TIME
 
     let activeQuests={}
 
@@ -29442,6 +29454,8 @@ function GENERATE_SAVE_CODE(){
     save.NPCs={}
     save.hotbar=[]
     save.quests=player.quests
+    save.isCrafting=player.isCrafting
+    save.TIME=TIME
 
     for(let i in hotbarSlots){
         
@@ -29522,8 +29536,10 @@ function GENERATE_SAVE_CODE(){
     return string
 }
 
+
 if(DATA.saveCode)
     RUN_SAVE_CODE(DATA.saveCode)
+
 
 function SAVE_GAME(){
 
