--- a/index.html
+++ b/index.html
@@ -4494,7 +4494,7 @@ document.getElementById('mainPlay').onclick=function(){
         alert("\nTo import a game, you'll need a string containing the saved data of the game. Copy the string, and then use CTRL+V in this program to start the game.\n\nAn invalid code will create an error message. There is a chance errors in the save code are not detected and pass through. This may corrupt the game, resulting in crashes.")
     }
 
-    document.addEventListener('paste',(e)=>{
+    document.onpaste=(e)=>{
 
         if(!ableToImport) return
 
@@ -4510,7 +4510,7 @@ document.getElementById('mainPlay').onclick=function(){
         let lastSavedDate=`${(date.getMonth()+1).toString().padStart(2,'0')}/${date.getDate().toString().padStart(2,'0')}/${date.getFullYear()}  ${date.getHours().toString().padStart(2,'0')}:${date.getMinutes().toString().padStart(2,'0')}:${date.getSeconds().toString().padStart(2,'0')}`
 
         BeeSwarmSimulator({id:'Imported: '+lastSavedDate,saveCode:text})
-    })
+    }
 
     loadFromDB().then(res=>{
 
@@ -4648,6 +4648,8 @@ window.drawThumbnail(document.getElementById('thumbnailCanv'))
 var _M=Math
 
 function BeeSwarmSimulator(DATA){
+
+document.onpaste=undefined
 
 let audio_ctx=new AudioContext(),soundCache={}
 
