wowie a cool propeller hat

--- a/index.html
+++ b/index.html
@@ -23394,7 +23394,7 @@ player=(function(out){
         boots:'none',
         belt:'none',
         backpack:'pouch',
-        mask:'helmet',
+        mask:'propellerHat',
         leftGuard:'none',
         rightGuard:'none',
         glider:'glider',
