--- a/index.html
+++ b/index.html
@@ -4334,23 +4334,23 @@ sound is currently disabled to stop my computer from becoming a waffle cooker
 <script src="mapMesh.js"></script>
 <script src="thumbnail.js"></script>
 
-<!-- <script src="music_popStar.js"></script>
-<script src="music_scorchingStar.js"></script>
-<script src="music_gummyStar.js"></script>
-<script src="music_frog.js"></script>
-<script src="music_inflateBalloons.js"></script>
-<script src="music_haste.js"></script>
-<script src="music_bombToken.js"></script>
-<script src="music_markToken.js"></script>
-<script src="music_melodyToken.js"></script>
-<script src="music_focusToken.js"></script>
-<script src="music_rageToken.js"></script>
-<script src="music_surpriseParty.js"></script>
-<script src="music_infernoToken.js"></script>
-<script src="music_flameFuelToken.js"></script>
-<script src="music_babyLove.js"></script>
-<script src="music_boostToken.js"></script>
-<script src="music_inspireToken.js"></script> -->
+<!-- <script src="audio/music_popStar.js"></script>
+<script src="audio/music_scorchingStar.js"></script>
+<script src="audio/music_gummyStar.js"></script>
+<script src="audio/music_frog.js"></script>
+<script src="audio/music_inflateBalloons.js"></script>
+<script src="audio/music_haste.js"></script>
+<script src="audio/music_bombToken.js"></script>
+<script src="audio/music_markToken.js"></script>
+<script src="audio/music_melodyToken.js"></script>
+<script src="audio/music_focusToken.js"></script>
+<script src="audio/music_rageToken.js"></script>
+<script src="audio/music_surpriseParty.js"></script>
+<script src="audio/music_infernoToken.js"></script>
+<script src="audio/music_flameFuelToken.js"></script>
+<script src="audio/music_babyLove.js"></script>
+<script src="audio/music_boostToken.js"></script>
+<script src="audio/music_inspireToken.js"></script> -->
 
 
 <script type='application/javascript'>
