added more flappy bees

--- a/index.html
+++ b/index.html
@@ -30838,7 +30838,9 @@ function loop(now){
         -58,20.5,63,6,0.1,-0.3,-1,0.1,beeInfo.brave.u,beeInfo.brave.v,beeInfo.brave.meshPartId,
         24,20.3,63,6,-0.45,-0.1,-1,0,beeInfo.honey.u,beeInfo.honey.v,beeInfo.honey.meshPartId,
         -31,40.8,68.25,6,-0.2,-0.2,-1,0,beeInfo.lion.u,beeInfo.lion.v,beeInfo.lion.meshPartId,
-        51.5,17,-19,6,-0.5,-0.1,0.5,0.2,beeInfo.windy.u,beeInfo.windy.v,beeInfo.windy.meshPartId
+        51.5,17,-19,6,-0.5,-0.1,0.5,0.2,beeInfo.windy.u,beeInfo.windy.v,beeInfo.windy.meshPartId,
+        -7,15,-41,3,-0.7,0,0.3,BEE_FLY,beeInfo.gummy.u,beeInfo.gummy.v,beeInfo.gummy.meshPartId,
+        61,12,34,1.5,-1,0,0,BEE_FLY,beeInfo.digital.u,beeInfo.digital.v,beeInfo.digital.meshPartId
     ]
     
     gl.useProgram(tokenGeometryProgram)
